<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="st_app_name">CollageApp</string>
    <string name="st_main_subtitle">Make beautiful collages</string>

    <string name="st_yes">Yes</string>
    <string name="st_no">No</string>

    <string name="st_repeat">Repeat</string>
    <string name="st_cancel">Cancel</string>
    <string name="st_add">Add</string>
    <string name="st_more">More</string>

    <string name="st_sing_in">Sing in</string>

    <string name="st_content_description">Img</string>
    <string name="st_feed">Feed</string>

    <string name="st_settings">Settings</string>
    <string name="st_account">Account</string>
    <string name="st_exit">Log out</string>
    <string name="st_exit_question">Are you sure you want to log out?</string>
    <string name="st_about_app">About app</string>
    <string name="st_version">Version</string>
    <string name="st_clear_cache">Clear cache</string>
    <string name="st_clear_cache_complete">Caches have been cleared</string>

    <string name="st_search">Search</string>
    <string name="st_search_user">Search user</string>
    <string name="st_enter_nick">Enter user nick</string>
    <string name="st_start_search">Search photos</string>
    <string name="st_welcome">Welcome to CollageApp!</string>
    <string name="st_welcome_sub">Here you can make collage of some photos, taken from users Instagram</string>
    <string name="st_empty_collage">Tap on photos to add to collage</string>
    <string name="st_make_collage">Make collage!</string>

    <string name="st_error_title">Error</string>
    <string name="st_error_unknown">An unknown error occurred</string>
    <string name="st_error_connection">An error connection occurred. Check your network connection and try again</string>
    <string name="st_error_no_user_found">Unable to find any user with the same nickname</string>
    <string name="st_error_loading">An error occurred while loading data</string>
    <string name="st_user_private_acc">You cannot view this resource</string>
    <string name="st_no_photos">This user has not added any photos yet</string>
    <string name="st_error_load_avatar">Error on loading avatar</string>
    <string name="st_error_no_connection">No network connection found</string>
    <string name="st_error_download_image">Error on loading photo</string>
    <string name="st_error_on_saving">Error on saving photo</string>
    <string name="st_error_photo_loading">Photo not yet loaded</string>
    <string name="st_error_clear_tmp">An error occurred while clearing cache</string>
    <string name="st_no_instagram">Instagram is not installed</string>


    <string name="st_close">Close</string>
    <string name="st_progress_title">Please wait</string>
    <string name="st_progress_message">Loading &#8230;</string>

    <string name="st_null_query">User nickname must be not null</string>
    <string name="st_user_name_default">User</string>
    <string name="st_photo">Photo</string>
    <string name="st_collage">Collage</string>
    <string name="st_save">Save</string>
    <string name="st_save_to_gall">Save to gallery</string>
    <string name="st_share">Share</string>
    <string name="st_repost">Repost</string>
    <string name="st_offer_to_share">Would you like to share the resulting photo?</string>
    <string name="st_nothing_found">Noting found</string>
    <string name="st_photo_saved">The photo was saved to gallery</string>
    <string name="st_share_using">Share using</string>
    <string name="st_enter_text_hint">Enter text</string>

    <string name="st_user_profile">Profile</string>
    <string name="st_media">Media</string>
    <string name="st_follows">Follows</string>
    <string name="st_followed_by">Followed by</string>

    <string name="st_edit_mode">Edit mode</string>
    <string name="st_open_edit_mode">Open edit mode</string>
    <string name="st_close_edit_mode">Close edit mode</string>
    <string name="st_show_likes_count">Show likes count</string>
    <string name="st_hide_likes_count">Hide likes count</string>

    <string name="st_edit_bg">Edit background</string>
    <string name="st_background">Background</string>
    <string name="st_shape">Shape</string>
    <string name="st_shape_square">Square</string>
    <string name="st_shape_circle">Circle</string>
    <string name="st_outlines">Outlines</string>
    <string name="st_color">Color</string>
    <string name="st_content">Content</string>
    <string name="st_edit_size">Edit size</string>
    <string name="st_size">Size</string>
    <string name="st_place">Place</string>
    <string name="st_photo_layout">Layout</string>
    <string name="st_select_layout">Select frame</string>
    <string name="st_not_supported_layout_count">This photos count is not supported yet</string>
    <string name="st_default">Default</string>
    <string name="st_variation">Variation</string>
    <string name="st_repost_text">Repost by CollageApp</string>
    <string name="st_repost_subtext">Repost by #CollageApp</string>

    <!--Version 1.3.6-->
    <string name="st_copy_url">Copy URL</string>
    <string name="st_user_url_prefix">http://i.instagram.com/</string>
    <string name="st_text_clipped">Text was copied to the clipboard</string>
    <string name="st_google_play">Google Play</string>
    <string name="st_please_rate">Rate the application</string>
    <string name="st_error_do_action">Sorry, but you can not do this action</string>
    <string name="st_share_app">Share</string>
    <string name="st_share_app_sub">Tell your friends about this application</string>
    <string name="st_share_app_text">Check out \"CollageApp\"\nhttps://play.google.com/store/apps/details?id=org.almiso.collageapp.android</string>

    <!--Strings from color picker library-->
    <string name="positive">OK</string>
    <string name="negative">Cancel</string>
    <string name="previewTitle">Color Preview (New|Old)</string>
    <string name="presetColorsTitle">Preset Colors</string>
    <string name="alpha_title">Alpha</string>
    <!--Strings from color picker library-->

</resources>
