<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/st_more"
        android:icon="@drawable/ic_action_overflow"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/item_share"
                android:title="@string/st_share"
                app:showAsAction="never" />
            <item
                android:id="@+id/item_retweet"
                android:title="@string/st_repost"
                app:showAsAction="never"></item>
            <item
                android:id="@+id/item_save"
                android:title="@string/st_save_to_gall"
                app:showAsAction="never"></item>

        </menu>
    </item>

</menu>