<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:title="@string/st_more"
        android:icon="@drawable/ic_action_overflow"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/editMode"
                android:title="@string/st_edit_mode"
                android:icon="@drawable/ic_action_edit_dark"
                app:showAsAction="always">
            </item>

            <item
                android:id="@+id/likesCount"
                android:title="@string/st_show_likes_count"
                android:icon="@drawable/ic_action_favorite"
                app:showAsAction="never"/>

        </menu>
    </item>

    <item
        android:id="@+id/userAvatar"
        android:title="@string/st_user_name_default"
        app:actionLayout="@layout/user_avatar_small"
        app:showAsAction="always"/>


</menu>