<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/st_frag_bg_def"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}">



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="12dp"
        android:padding="12dp"
        android:background="@color/white"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:text="@string/st_welcome"
            android:textSize="26sp"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:text="@string/st_welcome_sub"
            android:textSize="22sp"
            android:gravity="center"
            android:layout_marginTop="18sp"
            android:fontFamily="sans-serif-light"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        style="@style/ButtonMain"
        android:id="@+id/buttonAuthorize"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:text="@string/st_sing_in" />
</FrameLayout>
