<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/layoutRoot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/layoutContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="12dp"
        android:background="@android:color/white"
        android:orientation="vertical">


        <TextView
            android:id="@+id/headerTitleNew"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:text="@string/st_edit_bg"
            android:textColor="@color/st_dialog_text"
            android:textSize="24sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/st_div_bg"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:singleLine="true"
            android:text="@string/st_shape"
            android:textSize="20sp"
            android:textColor="@color/st_dialog_text"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <Button
                style="@style/ButtonMain"
                android:id="@+id/buttonRect"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/st_shape_square"
                android:layout_marginRight="2dp"/>

            <Button
                style="@style/ButtonMain"
                android:id="@+id/buttonCircle"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/st_shape_circle"
                android:layout_marginLeft="2dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:singleLine="true"
            android:text="@string/st_outlines"
            android:textSize="20sp"
            android:textColor="@color/st_dialog_text"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <Button
                style="@style/ButtonMain"
                android:id="@+id/buttonStrokeColor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:text="@string/st_color"/>

            <SeekBar
                android:id="@+id/seekBarStrokeSize"
                style="@android:style/Widget.Holo.SeekBar"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                android:layout_gravity="center"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:singleLine="true"
            android:text="@string/st_content"
            android:textSize="20sp"
            android:textColor="@color/st_dialog_text"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">


            <Button
                style="@style/ButtonMain"
                android:id="@+id/buttonBgColor"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
                android:text="@string/st_color"/>

            <Button
                style="@style/ButtonMain"
                android:id="@+id/buttonFrame"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/st_frame"
                android:layout_marginLeft="2dp"/>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>