<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/st_frag_bg_def"
                tools:context="${packageName}.${activityClass}">

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:gravity="center"
        android:text="@string/st_nothing_found"
        android:textColor="@color/grey_holo"
        android:textSize="19sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"/>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:padding="12dp"
        android:layout_above="@+id/mBottom"
        android:background="@color/white"
        android:stretchMode="columnWidth"
        android:columnWidth="@dimen/image_thumbnail_size"
        android:horizontalSpacing="@dimen/image_thumbnail_spacing"
        android:verticalSpacing="@dimen/image_thumbnail_spacing"
        android:numColumns="auto_fit"
        android:listSelector="@drawable/photogrid_list_selector"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <FrameLayout
        android:id="@+id/mBottom"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/white"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:layout_alignParentBottom="true">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_height="92dp">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:divider="?android:dividerVertical"
                android:orientation="horizontal"
                android:showDividers="middle"/>

        </HorizontalScrollView>

        <TextView
            android:id="@android:id/empty"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center|top"
            android:gravity="center"
            android:text="@string/st_empty_collage"
            android:fontFamily="sans-serif-light"
            android:textColor="?android:textColorSecondary"/>

        <Button
            android:id="@+id/buttonMakeCollage"
            style="@style/ButtonMain"
            android:layout_width="match_parent"
            android:layout_gravity="center|bottom"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/st_make_collage"
            android:layout_height="48dp"/>

    </FrameLayout>

</RelativeLayout>