<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rootContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/st_frag_bg_def"
                tools:context="${packageName}.${activityClass}">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="12dp"
        android:padding="12dp"
        android:background="@color/white"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="4dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp">


                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <ImageView
                    android:id="@+id/avatarTouchLayer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/st_selector_avatar_circle"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:fontFamily="sans-serif"
                    android:layout_marginLeft="8sp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:padding="4sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/buttonMyPhotos"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bg_profile_btn_rect"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/mediaCount"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:text="--"
                            android:fontFamily="sans-serif-light"
                            android:gravity="center"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:layout_height="match_parent"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1.5"
                            android:fontFamily="sans-serif-light"
                            android:singleLine="true"
                            android:gravity="center"
                            android:text="@string/st_media"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/buttonMyFollows"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bg_profile_btn_rect"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/followsCount"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:text="--"
                            android:fontFamily="sans-serif-light"
                            android:gravity="center"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:layout_height="match_parent"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1.5"
                            android:fontFamily="sans-serif-light"
                            android:singleLine="true"
                            android:gravity="center"
                            android:text="@string/st_follows"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/buttonMyFollowedBy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bg_profile_btn_rect"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/followedByCount"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:text="--"
                            android:gravity="center"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-light"
                            android:layout_height="match_parent"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1.5"
                            android:singleLine="true"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/st_followed_by"/>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <Button
            style="@style/ButtonMain"
            android:id="@+id/buttonSearchFeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/st_feed"/>
    </LinearLayout>

</RelativeLayout>
